...
            "value": "Keep mining"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "채굴 계속"
          }
        }
      }
    },
    "active.abandon.confirm": {
      "extractionState": "stale",
...
            "value": "Confirm early return"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "중도 귀환 확인"
          }
        }
      }
    },
    "active.abandon.title": {
      "extractionState": "stale",
...
            "value": "Survey mine"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "탐사 갱도"
          }
        }
      }
    },
    "game.today": {
      "extractionState": "stale",
...
